<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/book_app_icon" />

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/imgBookImage"
            android:text="@string/list_item"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:drawableStart="@drawable/starratin"
            android:drawablePadding="4dp"
            android:paddingEnd="20dp"
            android:text="@string/_4_5"
            android:textColor="#999900"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:layout_toEndOf="@id/imgBookImage"
            android:text="@string/name_of_author"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtBookCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookAuthor"
            android:layout_toEndOf="@id/imgBookImage"
            android:text="@string/book_cost"
            android:textColor="#000000"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>