<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="4dp"
    android:background="#ffffff"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llFavContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="11">

        <ImageView
            android:id="@+id/imgFavBookImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="#f5f5f5"
            android:scaleType="fitCenter"
            android:src="@drawable/default_book_cover" />

        <TextView
            android:id="@+id/txtFavBookTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/sample_book_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:text="@string/sample_author"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtFavBookPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:text="@string/sample_cost"
            android:textAlignment="center"
            android:textColor="#357a38"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtFavBookRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:drawableLeft="@drawable/starratin"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="4.5"
            android:textAlignment="center"
            android:textColor="#ffca28"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#f5f5f5" />

    </LinearLayout>

</androidx.cardview.widget.CardView>